--- a/_config.yml
+++ b/_config.yml
@@ -18,10 +18,10 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 
-title: Gitnamu's blog
+title: Gitnamu
 email: skagh1750@naver.com
 description: >- # this means to ignore newlines until "baseurl:"
-  Themed by ejjoo
+  김남호의 깃 블로그
 # baseurl: "/" # the subpath of your site, e.g. /blog
 # url: "http://ejjoo.github.io" # the base hostname & protocol for your site, e.g. http://example.com
 github_username: gitnamu
