--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ title: Gitnamu
 tagline: 'Namho's blog'
 description: 'A Jekyll theme adapted from <a href="http://lanyon.getpoole.com/" target="_blank">Lanyon</a>. Made by <a href="http://codinfox.github.io" target="_blank">@codinfox</a>.'
 baseurl: ""
-url: http://gitnamu.github.io
+url: "http://gitnamu.github.io"
 logo: '/public/logo.png'
 
 # Site configurations
