--- a/_config.yml
+++ b/_config.yml
@@ -1,24 +1,22 @@
-title: IT-блог
+title: Gitnamu
 description: > # this means to ignore newlines until "baseurl:"
   Blog with theme Future Imperfect<br>
-baseurl: "" # the subpath of your site, e.g. /blog
-url: "https://future-imperfect.kaptn.ru" # the base hostname & protocol for your site, e.g. http://example.com
+baseurl: ""
+url: "https://gitnamu.github.io"
 
 
 author:
-  name: 'Viktoriya Kapitonenko'
+  name: 'Kim Namho'
   last_name: 'Kapitonenko'
   cv: '//kaptn.ru'
   avatar: '/images/avatar.jpeg'
-  github_username:  kaptn3  
+  github_username:  gitnamu
   email: vika@kaptn.ru
   vk_id: id201664979
-  telegram_name: vikapitoshka 
+  telegram_name: vikapitoshka
   logo: '/images/logo.svg'
 
 # Build settings
 markdown: kramdown
 
 permalink: /:categories/:year/:title.html
-
-
