--- a/_config.yml
+++ b/_config.yml
@@ -21,7 +21,7 @@
 title: Gitnamu
 email: N/A
 description: >- # this means to ignore newlines until "baseurl:"
-  Kim Namho's blog
+  gitnamu's blog
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "http://gitnamu.github.io" # the base hostname & protocol for your site, e.g. http://example.com
 github_username: gitnamu
